# default

./: CMakeLists.txt  main.cpp
include/: CMakeLists.txt  island.hpp  list.hpp  roman.hpp  text.h
src/: CMakeLists.txt  list.cpp  roman.cpp
test/: CMakeLists.txt  test_default.cpp  test_main.cpp
